<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="9"
    android:orientation="horizontal"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3e0008"
        android:layout_weight="2"
        android:elevation="4dp">
    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/ornament0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:layout_marginTop="280dp"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingTop="20dp"
        android:gravity="start">
        <Button
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#0000"
            android:text="@string/main"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:fontFamily="@font/noto_sans_bold"/>
        <Button
            android:id="@+id/lessons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#0000"
            android:text="@string/lessons"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:fontFamily="@font/noto_sans_bold"/>
        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#0000"
            android:text="@string/settings"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:fontFamily="@font/noto_sans_bold"/>
        <Button
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#0000"
            android:text="Профиль"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:fontFamily="@font/noto_sans_bold"/>

        <Button
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#0000"
            android:text="@string/addLesson"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:fontFamily="@font/noto_sans_bold"/>

    </LinearLayout>
    </FrameLayout>
    <Button
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:alpha="0.75"
        android:scaleX="10"
        android:background="#0000"/>
</LinearLayout>