<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_bold"
                android:text="AbaiBillim"
                android:textSize="22.75sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:textColor="@color/black"/>
            <FrameLayout
                android:layout_width="286dp"
                android:layout_height="286dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="81dp"
                android:clipToOutline="true"
                android:background="@drawable/shape_circle">
                    <ImageView
                        android:id="@+id/banner0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="1"
                        android:background="@drawable/person0"/>
                    <ImageView
                        android:id="@+id/banner1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0"
                        android:background="@drawable/person1"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/home0"
                android:textColor="@color/black"
                android:fontFamily="@font/noto_sans_bold"
                android:lineSpacingMultiplier="0.85"
                android:textSize="33.9sp"/>
            <TextView
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/home1"
                android:textColor="@color/black"
                android:fontFamily="@font/noto_sans_regular"
                android:lineSpacingMultiplier="1.1"
                android:textSize="11sp"/>
            <Button
                android:id="@+id/startButton"
                android:layout_width="242dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/homeButton"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:backgroundTint="#3e0005"
                android:fontFamily="@font/noto_sans_bold"
                android:background="@drawable/shape_circled"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ornament"
                android:layout_marginTop="40dp"/>
            <TextView
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:text="@string/home2"
                android:textColor="@color/black"
                android:fontFamily="@font/noto_sans_bold"
                android:lineSpacingMultiplier="0.85"
                android:textSize="21sp"/>
            <TextView
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/home3"
                android:textColor="@color/black"
                android:fontFamily="@font/noto_sans_regular"
                android:textSize="11sp"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:scrollbarSize="0dp"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-200dp"
                android:orientation="horizontal"
                android:paddingEnd="74dp"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:layout_marginStart="74dp"
                    android:background="@drawable/shape_outline"
                    android:paddingHorizontal="16dp"
                    android:text="@string/homeView0"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/shape_outline"
                    android:paddingHorizontal="16dp"
                    android:text="@string/homeView1"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/shape_outline"
                    android:paddingHorizontal="16dp"
                    android:text="@string/homeView2"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/shape_outline"
                    android:paddingHorizontal="16dp"
                    android:text="@string/homeView3"
                    android:textAllCaps="false"
                    android:textSize="15sp" />
            </LinearLayout>
            </HorizontalScrollView>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ornament"
                android:layout_marginTop="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:text="@string/home4"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:fontFamily="@font/noto_sans_bold"
                android:paddingHorizontal="74dp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_marginHorizontal="74dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/shape_exercise"
                android:backgroundTint="#3e0008"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/homeRate0"
                    android:layout_marginTop="28dp"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="БАСТАПҚЫ"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/noto_sans_bold"
                    android:textSize="35sp"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="74dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="17dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/shape_exercise"
                    android:backgroundTint="#3e0008"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:text="Словарь"
                        android:layout_gravity="center"
                        android:fontFamily="@font/noto_sans_regular"
                        android:textSize="15sp"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="17dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/shape_exercise"
                    android:backgroundTint="#3e0008"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:text="Тесттер"
                        android:layout_gravity="center"
                        android:fontFamily="@font/noto_sans_regular"
                        android:textSize="15sp"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="74dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingBottom="40dp">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="17dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/shape_exercise"
                    android:backgroundTint="#3e0008"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:text="@string/homeRate1"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/grammar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:text="20/30"
                        android:layout_gravity="center"
                        android:layout_marginTop="14dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:textSize="30sp"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="17dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/shape_exercise"
                    android:backgroundTint="#3e0008"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:text="@string/homeRate2"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/alphabet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:text="20/30"
                        android:layout_gravity="center"
                        android:layout_marginTop="14dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:textSize="30sp"/>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
        </ScrollView>
</FrameLayout>
    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:orientation="horizontal"-->
    <!--            android:elevation="10dp"-->
    <!--            android:alpha="0"-->
    <!--            >-->
    <!--            <View-->
    <!--                android:layout_width="54dp"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:background="#90aaff"-->
    <!--                android:layout_marginStart="20dp"-->
    <!--                android:alpha="0.5"/>-->
    <!--            <View-->
    <!--                android:layout_width="54dp"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:background="#90aaff"-->
    <!--                android:layout_marginStart="20dp"-->
    <!--                android:alpha="0.5"/>-->
    <!--            <View-->
    <!--                android:layout_width="54dp"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:background="#90aaff"-->
    <!--                android:layout_marginStart="20dp"-->
    <!--                android:alpha="0.5"/>-->
    <!--            <View-->
    <!--                android:layout_width="54dp"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:background="#90aaff"-->
    <!--                android:layout_marginStart="20dp"-->
    <!--                android:alpha="0.5"/>-->
    <!--            <View-->
    <!--                android:layout_width="54dp"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:background="#90aaff"-->
    <!--                android:layout_marginStart="20dp"-->
    <!--                android:alpha="0.5"/>-->
    <!--        </LinearLayout>-->
    <!--    <ImageView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="-40000dp"-->
    <!--        android:layout_marginTop="-200dp"-->
    <!--        android:background="@drawable/examp"-->
    <!--        android:elevation="10dp"-->
    <!--        android:alpha="0"/>-->